chronobreak_derive/tests/ui/fails/chronobreak/unsupported_item_type.stderr
error: #[chronobreak] may only be applied to use statements and modules
 --> $DIR/unsupported_item_type.rs:5:1
  |
5 | pub struct Map {}
  | ^^^^^^^^^^^^^^^^^
